# sleeper-gini

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  run  run.py  sleeper-gini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/sleeper_gini/: __init__.py  __main__.py  cli.py  models.py
src/sleeper_gini/api/: __init__.py  fantasycalc.py  sleeper.py
src/sleeper_gini/services/: __init__.py  cache.py  gini.py  matcher.py
