[project]
name = "sleeper-gini"
version = "0.1.0"
description = "Analyze competitive balance in Sleeper dynasty fantasy football leagues"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
sleeper-gini = "sleeper_gini.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
